# ts-screen

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REFACTORING.md  STATISTICAL_GRADING.md  build-macos.sh  build-windows.bat  build.rs  nina_rounding_analysis.md  read_fits_headers  read_fits_headers.rs  test_nina_comparison.rs  test_nina_simple.rs  test_nina_star_detection.rs
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  security-audit.yml
scripts/: build-frontend.sh
src/: accord_imaging.rs  cli.rs  db.rs  debug.rs  fits.rs  grading.rs  hocus_focus_star_detection.rs  image_analysis.rs  lib.rs  main.rs  models.rs  mtf_stretch.rs  nina_star_detection.rs  opencv_canny.rs  opencv_contours.rs  opencv_morphology.rs  opencv_utils.rs  opencv_wavelets.rs  psf_fitting.rs  test_star_detection.rs  utils.rs
src/commands/: analyze_fits.rs  annotate_stars.rs  annotate_stars_common.rs  benchmark_psf.rs  dump_grading.rs  filter_rejected.rs  list_projects.rs  list_targets.rs  mod.rs  read_fits.rs  regrade.rs  show_images.rs  stretch_to_png.rs  update_grade.rs  visualize_psf.rs  visualize_psf_multi_common.rs
src/commands/visualize_psf/: mod.rs  star_selection.rs  text_render.rs  visualize_psf_multi.rs
src/server/: api.rs  cache.rs  embedded_static.rs  handlers.rs  mod.rs  state.rs
static/: README.md  UI_README.md  index.html  package-lock.json  package.json  vite.config.ts
static/src/: App.css  App.tsx  index.css
static/src/api/: client.ts  types.ts
static/src/components/: FilterControls.tsx  GroupedImageGrid.tsx  ImageCard.tsx  ImageDetailView.tsx  ImageGrid.tsx  KeyboardShortcutHelp.tsx  LazyImageCard.tsx  LazyImageGroup.tsx  ProjectTargetSelector.tsx  StatsDashboard.tsx  UndoRedoToolbar.tsx  VirtualizedGroupedImageGrid.tsx
static/src/hooks/: useGrading.ts  useImagePreloader.ts  useImageZoom.ts  useUndoRedo.ts
