[package]
name = "psf-guard"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
authors = ["Yann Ramin <github@theatr.us>"]
description = "PSF Guard: Astronomical image analysis and quality assessment tool for N.I.N.A. and FITS files"
license = "Apache-2.0"
repository = "https://github.com/theatrus/psf-guard"
homepage = "https://github.com/theatrus/psf-guard"
readme = "README.md"
keywords = ["astronomy", "telescope", "imaging", "analysis", "nina"]
categories = ["command-line-utilities", "science"]

[lib]
name = "psf_guard"
path = "src/lib.rs"


[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
regex = "1.11"
byteorder = "1.5"
fitrs = "0.5"
bumpalo = { version = "3.16", features = ["collections"] }
image = "0.25"
rand = "0.8"

[profile.release]
# Enable maximum optimizations for performance
opt-level = 3
# Enable link-time optimization
lto = true
# Set number of codegen units to 1 for better optimization
codegen-units = 1
# Enable panic unwinding to be optimized away in release builds
panic = 'abort'
# Allow aggressive loop optimizations and auto-vectorization
overflow-checks = false

[profile.dev]
# Keep some optimizations in debug builds for reasonable performance during development
opt-level = 1
# Disable overflow checks in dev for performance (be careful with this)
overflow-checks = false
